--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-requests~=2.28.2
-pytest~=7.2.2
+requests==2.28.2
+pytest==7.2.2
 selene==2.0.0b16
 python-dotenv==1.0.0
 allure-pytest==2.12.0
 curlify~=2.2.1
 selenium~=4.4.3
 python-dateutil==2.8.2
-pytz==2021.3
 faker
 jsonpath_rw
